--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <body>
     <header>
         <div class="container">
-            <h1>🗼 Tower Guide</h1>
-            <p class="subtitle">Guía completa de torres para Raid Rush TD. Descubre las estadísticas, mejoras y estrategias para cada torre del juego.</p>
+            <div class="header-content">
+                <h1>🗼 Tower Guide</h1>
+                <p class="subtitle">Guía completa de torres para Raid Rush TD</p>
+            </div>
         </div>
     </header>
 
